added some citations

--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -43,21 +43,21 @@
 %cjc2024Sept25: I think Lizzie and Deirdre already hit the highlights for the Intro for now. I agree that there are paragraphs that need to be moved to the Results and Discussion (anything that includes the figures). I also think you need to set up the experiement a bit better in why it's so cool. A little more development on the latitudinal gradient would be good, even if the results aren't exciting, it'd be great to set up our initial hypothesis more. And maybe get into trees vs shrubs and interannual variation. This was a massive endeavor, I want the reader to be excited about it. 
 
 \section{Introduction}
-Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming (CITES). Recent findings, however, have called this critical assumption into question. 
+Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{White1999}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming \citep{Churkina2005,White1999,Keenan2014}. Recent findings, however, have called this critical assumption into question. 
 
 %emwNov4 -- I would love to get Cat's help on citations in this paragraph (and throughout). I have offered some, but her ideas would be better.
-Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}. Observations have found that calendar growing seasons have lengthened with climate change \citep{}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events (Add the CITES I found below?). Recent work has suggested early, increased productivity in the growing seasons drives early senescence (Zani2020), and proposed include that plants adjust mid-season based on a combination of growing season heat and daylength (cite Zohner 2023 solstice). Such studies, however, are based generally on large-scale satellite measurements and small-scale single species pot experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies (cite Norby2021). 
-%emw2024Sep19 -- We should cite Zani et al. (Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees) here. Also, has Richardson or anyone shown SOS and EOS correlations? Some citations to check out for SOS and EOS correlations ...
-% https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
-% https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
+Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}. Observations have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}. Recent work has suggested early, increased productivity in the growing seasons drives early senescence \citep{Zani2020}, and proposed include that plants adjust mid-season based on a combination of growing season heat and daylength \citep{Zohner2023}. Such studies, however, are based generally on large-scale satellite measurements and small-scale single species pot experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies (cite Norby2021). 
+
+
+
 % Norby2021: 10.1126/science.abg1438
 
 %emwNov4 -- This opening used to be more about carbon but I think, given our data, we may want to veer away from C and NPP a bit and just come back to it later.
-These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset (CITES)---than start-of-season events, these trends may importantly vary across populations. Such population-level studies, however, are based on a very limited number of species (CITE zeng and me I guess). Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts (NachoOSPREE) and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
+These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset (CITES)---than start-of-season events, these trends may importantly vary across populations. Such population-level studies, however, are based on a very limited number of species \citep{Zeng2024}. Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts \citep{Morales-Castilla2024} and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
 % Theory suggesting this is driven by different plant strategies in response to abiotic and biotic environmental pressures (CITES), and also predicts that they should vary strongly in end-of-season events ...
 
 %emwNov8 -- I don't love the focus on variation ... we do get into species level variation but am not sure we want to ask this as the major question so I rewrote it, but left old text for now. 
-Here, we examine how start-of-season events, using leafout, may affect end-of-season, using budset, to determine the length of the growing season
+Here, we examine how start-of-season events, using leafout, may affect end-of-season, using budset, to determine the length of the growing season.
 % In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. 
 We address this using rarely available plant-scale data---phenological observations over three years from a multi-species common garden study that can test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and its thermal conditions, which connect to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo
 
@@ -68,9 +68,9 @@ We address this using rarely available plant-scale data---phenological observati
 %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
 %dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
 
-We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal growing season , defined here as....\citep{} ... (Figure \ref{fig:thermcal}c). 
+We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
 
-These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity (CITEzani). Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig XXa). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth (grephoneCITES). 
+These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig XXa). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth (grephoneCITES). 
 %The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 % The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. 
 
@@ -104,7 +104,7 @@ Our results show that there is little advantage from a carbon or primary product
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
 %dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
-So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability which in forest systems is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{}.
+So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability.  In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
 
 %emwNov8: Need to add that we have A LOT more information now from this study to guide future research ... (1) we need to be careful on what species we look at (so NDVI as Zohner uses, will schmeer across this and make understanding it mechanistically harder), (2) we need to figure out what mechanistically controls this [GOOD spot to introduce whether it might be leaf longeivity and also talk about budset vs. other late season events ... though it would be good if we can discuss budset and what it means vs. leaf coloring etc. earlier too]
  This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). Some forward thinking implications paragraph here.
