--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,261 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Daniel Buonaiuto at 2024-11-08 09:48:19 -0500 
+%% Created for Daniel Buonaiuto at 2024-12-03 10:37:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{AUGSPURGER2005,
+	author = {AUGSPURGER, C. K. and CHEESEMAN, J. M. and SALK, C. F.},
+	date = {2005/08/01},
+	date-added = {2024-12-03 10:37:08 -0500},
+	date-modified = {2024-12-03 10:37:21 -0500},
+	doi = {https://doi.org/10.1111/j.1365-2435.2005.01027.x},
+	isbn = {0269-8463},
+	journal = {Functional Ecology},
+	journal1 = {Functional Ecology},
+	journal2 = {Functional Ecology},
+	keywords = {canopy closure; chlorophyll; leaf phenology; nitrogen; photosynthetic capacity},
+	month = {2024/12/03},
+	n2 = {Summary 1 Carbon gain during phenological avoidance of canopy shade by an understorey plant depends on the extent of avoidance, the leaf stage during avoidance, and whether young and old leaves can exploit greater light availability in spring and autumn. 2 For Asimina triloba (L.) Dunal., Aesculus glabra Willd., Acer saccharum Marsh., Lindera benzoin (L.) Blume and Carpinus caroliniana Walt. in a deciduous forest in Illinois, USA, spring avoidance with leaves at full size ranged from 0 days for Asimina to 24 days for Aesculus, and brought 36?98{\%} of estimated total annual irradiance. Autumn avoidance was non-existent to minimal in all species. 3 Total chlorophyll reached maximum concentrations at the middle of leaf life span, and declined well before senescence. Leaf nitrogen concentrations and net photosynthetic capacity both peaked in youngest leaves during spring avoidance, and were low in old leaves during autumn avoidance. 4 Aesculus had especially high photosynthetic capacity during precanopy closure, while Asimina had relatively low capacity in its later developing leaves. 5 Young leaves of species with phenological avoidance can enhance C gain, while old leaves in autumn do not. Thus phenological avoidance in spring may enhance the persistence of understorey woody individuals of some species.},
+	number = {4},
+	pages = {537--546},
+	publisher = {John Wiley \& Sons, Ltd},
+	title = {Light gains and physiological capacity of understorey woody plants during phenological avoidance of canopy shade},
+	url = {https://doi.org/10.1111/j.1365-2435.2005.01027.x},
+	volume = {19},
+	year = {2005},
+	year1 = {2005},
+	bdsk-url-1 = {https://doi.org/10.1111/j.1365-2435.2005.01027.x}}
+
+@article{Korner2023,
+	abstract = {Abstract What is addressed as growing season in terrestrial ecosystems is one of the main determinants of annual plant biomass production globally. However, there is no well-defined concept behind. Here, we show different facets of what might be termed growing season, each with a distinct meaning: (1) the time period during which a plant or a part of it actually grows and produces new tissue, irrespective of net carbon gain (growing season sensu stricto). (2) The period defined by developmental, that is, phenological markers (phenological season). (3) The period during which vegetation as a whole achieves its annual net primary production (NPP) or a net ecosystem production (NEP), expressed as net carbon gain (productive season) and (4) the period during which plants could potentially grow based on meteorological criteria (meteorological season). We hypothesize that the duration of such a `window of opportunity' is a strong predictor for NPP at a global scale, especially for forests. These different definitions have implications for the understanding and modelling of plant growth and biomass production. The common view that variation in phenology is a proxy for variation in productivity is misleading, often resulting in unfounded statements on potential consequences of climatic warming such as carbon sequestration.},
+	author = {K{\"o}rner, Christian and M{\"o}hl, Patrick and Hiltbrunner, Erika},
+	date-added = {2024-12-03 09:46:39 -0500},
+	date-modified = {2024-12-03 09:46:46 -0500},
+	doi = {https://doi.org/10.1111/ele.14260},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ele.14260},
+	journal = {Ecology Letters},
+	keywords = {climate, development, dormancy, phenology, plant growth, primary production, roots, seasonality, window of opportunity},
+	number = {8},
+	pages = {1277-1292},
+	title = {Four ways to define the growing season},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ele.14260},
+	volume = {26},
+	year = {2023},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ele.14260},
+	bdsk-url-2 = {https://doi.org/10.1111/ele.14260}}
+
+@article{Zeng2024,
+	abstract = {Summary Forecasting the biological impacts of climate change requires understanding how species respond to warmer temperatures through interannual flexible variation vs through adaptation to local conditions. Yet, we often lack this information entirely or find conflicting evidence across studies, which is the case for spring phenology. We synthesized common garden studies across Europe and North America that reported spring event dates for a mix of angiosperm and gymnosperm tree species in the northern hemisphere, capturing data from 384 North American and 101 European provenances (i.e. populations) with observations from 1962 to 2019, alongside autumn event data when provided. Across continents, we found no evidence of provenance effects in spring phenology, but strong clines with latitude and mean annual temperature in autumn. These effects, however, appeared to diverge by continent and species type (gymnosperm vs angiosperm), with particularly pronounced clines in North America in autumn events. Our results suggest flexible, likely plastic responses, in spring phenology with warming, and potential limits -- at least in the short term -- due to provenance effects for autumn phenology. They also highlight that, after over 250 yr of common garden studies on tree phenology, we still lack a holistic predictive model of clines across species and phenological events.},
+	author = {Zeng, Ziyun Alina and Wolkovich, E. M.},
+	date-added = {2024-12-03 09:40:39 -0500},
+	date-modified = {2024-12-03 09:40:50 -0500},
+	doi = {https://doi.org/10.1111/nph.19674},
+	eprint = {https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.19674},
+	journal = {New Phytologist},
+	keywords = {budburst, budset, climate change, common gardens, deciduous and evergreen trees, leafout, senescence, spring phenology},
+	number = {5},
+	pages = {1957-1964},
+	title = {Weak evidence of provenance effects in spring phenology across Europe and North America},
+	url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.19674},
+	volume = {242},
+	year = {2024},
+	bdsk-url-1 = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.19674},
+	bdsk-url-2 = {https://doi.org/10.1111/nph.19674}}
+
+@article{Morales-Castilla2024,
+	abstract = {The ability to adapt to climate change requires accurate ecological forecasting. Current forecasts, however, have failed to capture important variability in biological responses, especially across species. Here we present a new method using Bayesian hierarchical phylogenetic models and show that species-level differences are larger than the average differences between cues. Applying our method to phenological experiments manipulating temperature and day length we show an underlying phylogenetic structure in plant phenological responses to temperature cues, whereas responses to photoperiod appear weaker, more uniform across species and less phylogenetically constrained. We thus illustrate how a focus on certain clades can bias prediction, but that predictions may be improved by integrating information on phylogeny to better estimate species-level responses. Our approach provides an advance in ecological forecasting, with implications for predicting the impacts of climate change and other anthropogenic forces on ecosystems.},
+	author = {Morales-Castilla, Ignacio and Davies, T. J. and Legault, Geoffrey and Buonaiuto, D. M. and Chamberlain, Catherine J. and Ettinger, Ailene K. and Garner, Mira and Jones, Faith A. M. and Loughnan, Deirdre and Pearse, William D. and Sodhi, Darwin S. and Wolkovich, E. M.},
+	date = {2024/09/01},
+	date-added = {2024-12-03 09:39:31 -0500},
+	date-modified = {2024-12-03 09:39:40 -0500},
+	doi = {10.1038/s41558-024-02102-2},
+	id = {Morales-Castilla2024},
+	isbn = {1758-6798},
+	journal = {Nature Climate Change},
+	number = {9},
+	pages = {989--995},
+	title = {Phylogenetic estimates of species-level phenology improve ecological forecasting},
+	url = {https://doi.org/10.1038/s41558-024-02102-2},
+	volume = {14},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1038/s41558-024-02102-2}}
+
+@article{Liu2010,
+	abstract = {The timing, length, and thermal intensity of the climatic growing season in China show statistically significant changes over the period of 1955 to 2000. Nationally, the average start of the growing season has shifted 4.6--5.5 days earlier while the average end has moved 1.8--3.7 days later, increasing the length of the growing season by 6.9--8.7 days depending on the base temperature chosen. The thermal intensity of the growing season has increased by 74.9--196.8 growing degree-days, depending on the base temperature selected. The spatial characteristics of the change in the timing and length of the growing season differ from the geographical pattern of change in temperatures over this period; but the spatial characteristics of change in growing degree-days does resemble the pattern for temperatures, with higher rates in northern regions. Nationally, two distinct regimes are evident over time: an initial period where growing season indicators fluctuate near a base period average, and a second period of rapidly increasing growing season length and thermal intensity. Growing degree-days are highly correlated with March-to-November mean air temperatures in all climatic regions of China; the length of the growing season is likewise highly correlated with March-to-November mean air temperatures except in east, southeast and southwest China at base temperature of 0$\,^{\circ}$C and southeast China at base temperature of 5$\,^{\circ}$C. The growing season start date appears to have the greater influence on the length of the growing season. In China, warmer growing seasons are also likely to be longer growing seasons.},
+	author = {Liu, Binhui and Henderson, Mark and Zhang, Yandong and Xu, Ming},
+	date = {2010/03/01},
+	date-added = {2024-12-03 09:34:50 -0500},
+	date-modified = {2024-12-03 09:35:01 -0500},
+	doi = {10.1007/s10584-009-9662-7},
+	id = {Liu2010},
+	isbn = {1573-1480},
+	journal = {Climatic Change},
+	number = {1},
+	pages = {93--118},
+	title = {Spatiotemporal change in China's climatic growing season: 1955--2000},
+	url = {https://doi.org/10.1007/s10584-009-9662-7},
+	volume = {99},
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1007/s10584-009-9662-7}}
+
+@article{Menzel1999,
+	abstract = {Changes in phenology (seasonal plant and animal activity driven by environmental factors) from year to year may be a sensitive and easily observable indicator of changes in the biosphere. We have analysed data from more than 30 years of observation in Europe, and found that spring events, such as leaf unfolding, have advanced by 6 days, whereas autumn events, such as leaf colouring, have been delayed by 4.8 days. This means that the average annual growing season has lengthened by 10.8 days since the early 1960s. These shifts can be attributed to changes in air temperature.},
+	author = {Menzel, Annette and Fabian, Peter},
+	date = {1999/02/01},
+	date-added = {2024-12-03 09:32:48 -0500},
+	date-modified = {2024-12-03 09:32:54 -0500},
+	doi = {10.1038/17709},
+	id = {Menzel1999},
+	isbn = {1476-4687},
+	journal = {Nature},
+	number = {6721},
+	pages = {659--659},
+	title = {Growing season extended in Europe},
+	url = {https://doi.org/10.1038/17709},
+	volume = {397},
+	year = {1999},
+	bdsk-url-1 = {https://doi.org/10.1038/17709}}
+
+@article{doi:10.1126/science.adf5098,
+	abstract = {Climate change is shifting the growing seasons of plants, affecting species performance and biogeochemical cycles. Yet how the timing of autumn leaf senescence in Northern Hemisphere forests will change remains uncertain. Using satellite, ground, carbon flux, and experimental data, we show that early-season and late-season warming have opposite effects on leaf senescence, with a reversal occurring after the year's longest day (the summer solstice). Across 84\% of the northern forest area, increased temperature and vegetation activity before the solstice led to an earlier senescence onset of, on average, 1.9 $\pm$ 0.1 days per $\,^{\circ}$C, whereas warmer post-solstice temperatures extended senescence duration by 2.6 $\pm$ 0.1 days per $\,^{\circ}$C. The current trajectories toward an earlier onset and slowed progression of senescence affect Northern Hemisphere--wide trends in growing-season length and forest productivity. Global warming is changing the timing of photosynthesis, with leaves emerging earlier in spring in the temperate and boreal zones. A longer growing season could mean greater carbon sequestration in forests, but the timing of leaves falling in autumn depends on multiple cues, making it difficult to predict. Zohner et al. investigated how leaf senescence relates to day length, temperature, and early-season photosynthesis across northern forests using remote sensing, ground observations, and experimental data. They found that warming had opposing effects on senescence dates depending on when it occurred: Warmer springs with higher photosynthesis correlated with earlier senescence, wheras warmer temperatures in autumn delayed senescence. Incorporating this shift in knowledge may improve predictions of vegetation response to climate change. ---BEL Early-season warming hastens onset and late-season warming extends duration of autumn leaf senescence in northern forests.},
+	author = {Constantin M. Zohner and Leila Mirzagholi and Susanne S. Renner and Lidong Mo and Dominic Rebindaine and Raymo Bucher and Daniel Palou{\v s} and Yann Vitasse and Yongshuo H. Fu and Benjamin D. Stocker and Thomas W. Crowther},
+	date-added = {2024-12-03 09:29:51 -0500},
+	date-modified = {2024-12-03 09:29:51 -0500},
+	doi = {10.1126/science.adf5098},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.adf5098},
+	journal = {Science},
+	number = {6653},
+	pages = {eadf5098},
+	title = {Effect of climate warming on the timing of autumn leaf senescence reverses after the summer solstice},
+	url = {https://www.science.org/doi/abs/10.1126/science.adf5098},
+	volume = {381},
+	year = {2023},
+	bdsk-url-1 = {https://www.science.org/doi/abs/10.1126/science.adf5098},
+	bdsk-url-2 = {https://doi.org/10.1126/science.adf5098}}
+
+@article{Keenan2015,
+	author = {Keenan, Trevor F. and Richardson, Andrew D.},
+	date = {2015/07/01},
+	date-added = {2024-12-03 09:27:31 -0500},
+	date-modified = {2024-12-03 09:27:37 -0500},
+	doi = {https://doi.org/10.1111/gcb.12890},
+	isbn = {1354-1013},
+	journal = {Global Change Biology},
+	journal1 = {Global Change Biology},
+	journal2 = {Global Change Biology},
+	journal3 = {Glob Change Biol},
+	keywords = {budburst; climate change; leaf senescence; senescence model; spring flushing; tree phenology},
+	month = {2024/12/03},
+	n2 = {Abstract Autumn senescence regulates multiple aspects of ecosystem function, along with associated feedbacks to the climate system. Despite its importance, current understanding of the drivers of senescence is limited, leading to a large spread in predictions of how the timing of senescence, and thus the length of the growing season, will change under future climate conditions. The most commonly held paradigm is that temperature and photoperiod are the primary controls, which suggests a future extension of the autumnal growing season as global temperatures rise. Here, using two decades of ground- and satellite-based observations of temperate deciduous forest phenology, we show that the timing of autumn senescence is correlated with the timing of spring budburst across the entire eastern United States. On a year-to-year basis, an earlier/later spring was associated with an earlier/later autumn senescence, both for individual species and at a regional scale. We use the observed relationship to develop a novel model of autumn phenology. In contrast to current phenology models, this model predicts that the potential response of autumn phenology to future climate change is strongly limited by the impact of climate change on spring phenology. Current models of autumn phenology therefore may overpredict future increases in the length of the growing season, with subsequent impacts for modeling future CO2 uptake and evapotranspiration.},
+	number = {7},
+	pages = {2634--2641},
+	publisher = {John Wiley \& Sons, Ltd},
+	title = {The timing of autumn senescence is affected by the timing of spring phenology: implications for predictive models},
+	url = {https://doi.org/10.1111/gcb.12890},
+	volume = {21},
+	year = {2015},
+	year1 = {2015},
+	bdsk-url-1 = {https://doi.org/10.1111/gcb.12890}}
+
+@article{Liu2016,
+	author = {Liu, Qiang and Fu, Yongshuo H. and Zhu, Zaichun and Liu, Yongwen and Liu, Zhuo and Huang, Mengtian and Janssens, Ivan A. and Piao, Shilong},
+	date = {2016/11/01},
+	date-added = {2024-12-03 09:25:31 -0500},
+	date-modified = {2024-12-03 09:25:37 -0500},
+	doi = {https://doi.org/10.1111/gcb.13311},
+	isbn = {1354-1013},
+	journal = {Global Change Biology},
+	journal1 = {Global Change Biology},
+	journal2 = {Global Change Biology},
+	journal3 = {Glob Change Biol},
+	keywords = {autumn phenology; climate change; end of growing season; Normalize Differenced Vegetation Index; spring phenology},
+	month = {2024/12/03},
+	n2 = {Abstract The timing of the end of the vegetation growing season (EOS) plays a key role in terrestrial ecosystem carbon and nutrient cycles. Autumn phenology is, however, still poorly understood, and previous studies generally focused on few species or were very limited in scale. In this study, we applied four methods to extract EOS dates from NDVI records between 1982 and 2011 for the Northern Hemisphere, and determined the temporal correlations between EOS and environmental factors (i.e., temperature, precipitation and insolation), as well as the correlation between spring and autumn phenology, using partial correlation analyses. Overall, we observed a trend toward later EOS in \~{}70{\%} of the pixels in Northern Hemisphere, with a mean rate of 0.18 $\pm$0.38 days yr?1. Warming preseason temperature was positively associated with the rate of EOS in most of our study area, except for arid/semi-arid regions, where the precipitation sum played a dominant positive role. Interestingly, increased preseason insolation sum might also lead to a later date of EOS. In addition to the climatic effects on EOS, we found an influence of spring vegetation green-up dates on EOS, albeit biome dependent. Our study, therefore, suggests that both environmental factors and spring phenology should be included in the modeling of EOS to improve the predictions of autumn phenology as well as our understanding of the global carbon and nutrient balances.},
+	number = {11},
+	pages = {3702--3711},
+	publisher = {John Wiley \& Sons, Ltd},
+	title = {Delayed autumn phenology in the Northern Hemisphere is related to change in both climate and spring phenology},
+	url = {https://doi.org/10.1111/gcb.13311},
+	volume = {22},
+	year = {2016},
+	year1 = {2016},
+	bdsk-url-1 = {https://doi.org/10.1111/gcb.13311}}
+
+@article{doi:10.1126/science.abd8911,
+	abstract = {The length of the growing season in temperate forests has been increasing under recent climate change because of earlier leaf emergence and later leaf senescence. However, Zani et al. show that this trend might be reversed as increasing photosynthetic productivity begins to drive earlier autumn leaf senescence (see the Perspective by Rollinson). Using a combination of experimental, observational, and modeling studies based on European forest trees, the researchers conclude that leaf senescence will advance by 3 to 6 days by the end of the 21st century rather than lengthening by 1 to 3 weeks as current phenological models have predicted. In turn, this predicted phenological pattern will limit the capacity of temperate forests to mitigate climate change through carbon uptake. Science, this issue p. 1066; see also p. 1030 Physiological constraints on the growing season and productivity may limit the capacity of temperate forests to retain carbon. Changes in the growing-season lengths of temperate trees greatly affect biotic interactions and global carbon balance. Yet future growing-season trajectories remain highly uncertain because the environmental drivers of autumn leaf senescence are poorly understood. Using experiments and long-term observations, we show that increases in spring and summer productivity due to elevated carbon dioxide, temperature, or light levels drive earlier senescence. Accounting for this effect improved the accuracy of senescence predictions by 27 to 42\% and reversed future predictions from a previously expected 2- to 3-week delay over the rest of the century to an advance of 3 to 6 days. These findings demonstrate the critical role of sink limitation in governing the end of seasonal activity and reveal important constraints on future growing-season lengths and carbon uptake of trees.},
+	author = {Deborah Zani and Thomas W. Crowther and Lidong Mo and Susanne S. Renner and Constantin M. Zohner},
+	date-added = {2024-12-03 09:22:19 -0500},
+	date-modified = {2024-12-03 09:22:19 -0500},
+	doi = {10.1126/science.abd8911},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.abd8911},
+	journal = {Science},
+	number = {6520},
+	pages = {1066-1071},
+	title = {Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees},
+	url = {https://www.science.org/doi/abs/10.1126/science.abd8911},
+	volume = {370},
+	year = {2020},
+	bdsk-url-1 = {https://www.science.org/doi/abs/10.1126/science.abd8911},
+	bdsk-url-2 = {https://doi.org/10.1126/science.abd8911}}
+
+@article{Keenan2014,
+	abstract = {The timing of life-history events has a strong impact on ecosystems. Now, analysis of the phenology of temperate forests in the eastern US indicates that in the case of an earlier spring and a later autumn, carbon uptake (photosynthesis) increases considerably more than carbon release (respiration).},
+	author = {Keenan, Trevor F. and Gray, Josh and Friedl, Mark A. and Toomey, Michael and Bohrer, Gil and Hollinger, David Y. and Munger, J. William and O'Keefe, John and Schmid, Hans Peter and Wing, Ian Sue and Yang, Bai and Richardson, Andrew D.},
+	date = {2014/07/01},
+	date-added = {2024-12-03 09:20:47 -0500},
+	date-modified = {2024-12-03 09:20:54 -0500},
+	doi = {10.1038/nclimate2253},
+	id = {Keenan2014},
+	isbn = {1758-6798},
+	journal = {Nature Climate Change},
+	number = {7},
+	pages = {598--604},
+	title = {Net carbon uptake has increased through warming-induced changes in temperate forest phenology},
+	url = {https://doi.org/10.1038/nclimate2253},
+	volume = {4},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1038/nclimate2253}}
+
+@article{White1999,
+	abstract = {Recent research suggests that increases in growing-season length (GSL) in mid-northern latitudes may be partially responsible for increased forest growth and carbon sequestration. We used the BIOME-BGC ecosystem model to investigate the impacts of including a dynamically regulated GSL on simulated carbon and water balance over a historical 88-year record (1900--1987) for 12 sites in the eastern USA deciduous broadleaf forest. For individual sites, the predicted GSL regularly varied by more than 15 days. When grouped into three climatic zones, GSL variability was still large and rapid. There is a recent trend in colder, northern sites toward a longer GSL, but not in moderate and warm climates. The results show that, for all sites, prediction of a long GSL versus using the mean GSL increased net ecosystem production (NEP), gross primary production (GPP), and evapotranspiration (ET); conversely a short GSL is predicted to decrease these parameters. On an absolute basis, differences in GPP between the dynamic and mean GSL simulations were larger than the differences in NEP. As a percentage difference, though, NEP was much more sensitive to changes in GSL than were either GPP or ET. On average, a 1-day change in GSL changed NEP by 1.6{\%}, GPP by 0.5{\%}, and ET by 0.2{\%}. Predictions of NEP and GPP in cold climates were more sensitive to changes in GSL than were predictions in warm climates. ET was not similarly sensitive. First, our results strongly agree with field measurements showing a high correlation between NEP and dates of spring growth, and second they suggest that persistent increases in GSL may lead to long-term increases in carbon storage.},
+	author = {White, M. A. and Running, S. W. and Thornton, P. E.},
+	date = {1999/02/01},
+	date-added = {2024-12-03 09:18:57 -0500},
+	date-modified = {2024-12-03 09:19:04 -0500},
+	doi = {10.1007/s004840050097},
+	id = {White1999},
+	isbn = {1432-1254},
+	journal = {International Journal of Biometeorology},
+	number = {3},
+	pages = {139--145},
+	title = {The impact of growing-season length variability on carbon assimilation and evapotranspiration over 88 years in the eastern US deciduous forest},
+	url = {https://doi.org/10.1007/s004840050097},
+	volume = {42},
+	year = {1999},
+	bdsk-url-1 = {https://doi.org/10.1007/s004840050097}}
+
+@article{Churkina2005,
+	abstract = {Abstract Using data from 28 flux measurement sites, we performed an analysis of the relationship between annual net ecosystem exchange (NEE) and the length of the carbon uptake period (CUP) (the number of days when the ecosystem is a net carbon sink). The observations suggest a linear correlation between the two quantities. The change in annual carbon exchange per day of the CUP differs significantly between deciduous and evergreen vegetation types. The sites containing vegetation with short-lived foliage (less than 1 year) have higher carbon uptake and respiration rates than evergreen vegetation. The ratio between mean daily carbon exchange rates during carbon uptake and release periods is relatively invariant (2.73$\pm$1.08) across different vegetation types. This implies that a balance between carbon release and uptake periods exists despite different photosynthetic pathways, life forms, and leaf habits. The mean daily carbon sequestration rate for these ecosystems never exceeds the carbon emission rate by more than a factor of 3. Growing season lengths for the study sites were derived from the normalized difference vegetation index (NDVI) of advanced very-high-resolution radiometer and from the enhanced vegetation index (EVI) of VEGETATION SPOT-4. NDVI and EVI were found to be closely related to the CUP, and consequently they also can be used to approximate annual carbon exchange of the ecosystems. This approach has potential for allowing extrapolation of NEE over large areas from remotely sensed data, given a certain amount of ancillary information. This method could complement the currently existing techniques for extrapolation, which rely upon modeling of the individual gross fluxes.},
+	author = {Churkina, Galina and Schimel, David and Braswell, Bobby H. and Xiao, Xiangming},
+	date-added = {2024-12-03 09:10:43 -0500},
+	date-modified = {2024-12-03 09:11:15 -0500},
+	doi = {https://doi.org/10.1111/j.1365-2486.2005.001012.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2486.2005.001012.x},
+	journal = {Global Change Biology},
+	keywords = {carbon uptake period, growing season length, net carbon exchange, phenology, vegetation index},
+	number = {10},
+	pages = {1777-1787},
+	title = {Spatial analysis of growing season length control over net ecosystem exchange},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2486.2005.001012.x},
+	volume = {11},
+	year = {2005},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2486.2005.001012.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1365-2486.2005.001012.x}}
 
 @article{Zohner2023,
 	abstract = {Climate change is shifting the growing seasons of plants, affecting species performance and biogeochemical cycles. Yet how the timing of autumn leaf senescence in Northern Hemisphere forests will change remains uncertain. Using satellite, ground, carbon flux, and experimental data, we show that early-season and late-season warming have opposite effects on leaf senescence, with a reversal occurring after the year's longest day (the summer solstice). Across 84\% of the northern forest area, increased temperature and vegetation activity before the solstice led to an earlier senescence onset of, on average, 1.9 $\pm$ 0.1 days per $\,^{\circ}$C, whereas warmer post-solstice temperatures extended senescence duration by 2.6 $\pm$ 0.1 days per $\,^{\circ}$C. The current trajectories toward an earlier onset and slowed progression of senescence affect Northern Hemisphere--wide trends in growing-season length and forest productivity. Global warming is changing the timing of photosynthesis, with leaves emerging earlier in spring in the temperate and boreal zones. A longer growing season could mean greater carbon sequestration in forests, but the timing of leaves falling in autumn depends on multiple cues, making it difficult to predict. Zohner et al. investigated how leaf senescence relates to day length, temperature, and early-season photosynthesis across northern forests using remote sensing, ground observations, and experimental data. They found that warming had opposing effects on senescence dates depending on when it occurred: Warmer springs with higher photosynthesis correlated with earlier senescence, wheras warmer temperatures in autumn delayed senescence. Incorporating this shift in knowledge may improve predictions of vegetation response to climate change. ---BEL Early-season warming hastens onset and late-season warming extends duration of autumn leaf senescence in northern forests.},
